--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" href="styles.css">
-    <script src="main.js" defer></script>
+    
     <title>Paint Pete</title>
 </head>
 <body>
@@ -42,6 +42,6 @@
         </div>
     </div>
 
-    
+    <script src="main.js"></script>
 </body>
 </html>
